--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.72.3",
+    "react-native-calendars": "^1.1300.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
