--- a/BackendExpressJSRSUDSAMRAT/package.json
+++ b/BackendExpressJSRSUDSAMRAT/package.json
@@ -2,7 +2,7 @@
   "name": "backendexpressjsrsudsamrat",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "prestart": "npm install",
     "start": "nodemon main.js",
