--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
+    "react-native-vision-camera": "^2.15.5",
     "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
