--- a/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
+++ b/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.70</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
