--- a/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
+++ b/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
@@ -36,6 +36,15 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.70</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version> <!-- Use the latest version -->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
 
 		<dependency>
