--- a/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/src/main/resources/application.properties
+++ b/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port = 9999
+
+
+
+# MongoDB properties
+spring.data.mongodb.host=36.93.137.4
+spring.data.mongodb.port=27018
+spring.data.mongodb.database=Absensi
