--- a/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
+++ b/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/pom.xml
@@ -45,11 +45,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>tensorflow</artifactId>
+			<version>1.15.0</version>
 		</dependency>
 
 		<dependency>
