--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -20,12 +20,12 @@
     "react-native-calendars": "^1.1300.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
-    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
-    "react-native-vision-camera": "^2.15.5",
+    "react-native-vision-camera": "^2.15.6",
     "rn-swipe-button": "^1.3.8",
+    "socket.io-client": "^4.7.2",
     "start": "^5.1.0"
   },
   "devDependencies": {
