--- a/RNAbsensiRSUDSAMRAT/tsconfig.json
+++ b/RNAbsensiRSUDSAMRAT/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-      "jsx": "react"
-  },
-  "extends": "@tsconfig/react-native/tsconfig.json"
+    "jsx": "react",
+    "esModuleInterop": true
+  }
+  // "extends": "@tsconfig/react-native/tsconfig.json"
 }
