--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.72.3",
     "react-native-calendars": "^1.1300.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-maps": "^1.7.1",
+    "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
