--- a/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/src/main/resources/application.properties
+++ b/BeckendSpringbootAbsensiRSUDSAMRAT/springboot/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.port = 9999
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 
 # MongoDB properties
