--- a/reactabsensirsudsamratadmin/package.json
+++ b/reactabsensirsudsamratadmin/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
