--- a/reactabsensirsudsamratadmin/package.json
+++ b/reactabsensirsudsamratadmin/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
