--- a/RNAbsensiRSUDSAMRAT/android/app/build.gradle
+++ b/RNAbsensiRSUDSAMRAT/android/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
     
     implementation 'com.facebook.fresco:animated-gif:2.5.0'
+    implementation project(':react-native-fs')
+
 
     
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
