--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -14,25 +14,24 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.72.3",
     "react-native-calendars": "^1.1300.0",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
-
-
     "react-native-heroicons": "^3.2.0",
-    "react-native-reanimated": "^3.4.2",
-
     "react-native-maps": "^1.7.1",
     "react-native-permissions": "^3.8.4",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
     "react-native-vision-camera": "^2.15.6",
+    "rn-fetch-blob": "^0.12.0",
     "rn-swipe-button": "^1.3.8",
     "socket.io-client": "^4.7.2",
     "start": "^5.1.0"
